[package]
name = "peacock-crest"
version = "0.1.0"
authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
edition = "2021"

[dependencies]
pest = "2.7.13"
pest_consume = "1.1.3"
pest_derive = "2.7.13"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
